161109: split 02-classes-01-interfaces into 01-interfaces and 02-extras

--- a/161109/161109.tex
+++ b/161109/161109.tex
@@ -41,5 +41,6 @@
 \input{01-algebraic-03-algebra}
 \input{01-algebraic-04-usage}
 \input{02-classes-01-interfaces}
+\input{02-classes-02-extras}
 
 \end{document}
