--- a/161109/01-algebraic-03-algebra.tex
+++ b/161109/01-algebraic-03-algebra.tex
@@ -58,7 +58,7 @@ data BinOp = Add | Sub | Mul | Div
 		\item Рациональные числа являются алгеброй с операциями:
 			\begin{enumerate}
 				\item $+ \colon \mathrm{Q} \times \mathrm{Q} \to \mathrm{Q}$
-				\item $\frac{1}{x} \colon \mathrm{Q} \to \mathrm{Q}$
+				\item $- \colon \mathrm{Q} \to \mathrm{Q}$ (унарный минус)
 			\end{enumerate}
 		\item Также алгебрами являются все группы:
 			\begin{enumerate}
