--- a/161109/01-algebraic-04-usage.tex
+++ b/161109/01-algebraic-04-usage.tex
@@ -35,7 +35,7 @@ data Args = Args { inp :: String,
                  deriving Show
 \end{minted}
 \end{onlyenv}
-\only<4>{Новые параметры: уровень логирования (0-3), флаг <<не перезаписывать файл при создании>>}
+\only<4>{Новые параметры: уровень логирования (\t{Int}), флаг <<не перезаписывать файл при создании>>, они всегда заданы.}
 
 \begin{onlyenv}<5-7>
 Попытка 3:
