161116: start 02-intro-simple-sql

--- a/161116/161116.tex
+++ b/161116/161116.tex
@@ -37,7 +37,7 @@
 \end{frame}
 
 \input{01-intro-01-what-is-db}
-%\input{01-intro-02-simple-sql}
+\input{01-intro-02-simple-sql}
 %\input{01-intro-03-usage}
 %\input{01-intro-04-exercises}
 %\input{02-extra-01-grouping}
