161116: update and finish 01-intro; update plan.txt with current status

--- a/161116/01-intro-03-usage.tex
+++ b/161116/01-intro-03-usage.tex
@@ -4,7 +4,7 @@
 	\tableofcontents[currentsection,currentsubsection]
 \end{frame}
 
-\begin{frame}{Где и зачем}
+\begin{frame}[t]{Где и зачем}
 	СУБД используются практически везде:
 	\begin{itemize}
 		\only<1>{
