161116: finish everything (hopefully)

--- a/161116/02-extra-01-grouping.tex
+++ b/161116/02-extra-01-grouping.tex
@@ -8,7 +8,7 @@
 \begin{frame}{GROUP BY}
 	\begin{itemize}
 		\item Полезно, когда мы хотим посчитать какую-то статистику по подмножествам строк.
-		\item Каждая агрегирующая функция начинает работать только внутри группы.
+		\item Каждая агрегирующая функция работает только внутри группы.
 		\item Например, суммарное население стран с разным политическим строем.
 		\item Можно группировать по нескольким полям.
 		\item Условие \t{WHERE} применяется до группировки.
