--- a/161116/161116.tex
+++ b/161116/161116.tex
@@ -41,8 +41,7 @@
 \input{01-intro-03-usage}
 \input{01-intro-04-extra}
 \input{02-extra-01-grouping}
-%\input{02-extra-02-joins}
-%\input{02-extra-03-union}
-%\input{03-home}
+\input{02-extra-02-joins}
+\input{02-extra-03-union}
 
 \end{document}
