Fix some mistypes

--- a/161116/01-intro-02-simple-sql.tex
+++ b/161116/01-intro-02-simple-sql.tex
@@ -99,7 +99,7 @@
 	\end{itemize}
 	Мораль: не стоит надеяться на номера строк, \t{LIMIT} и \t{OFFSET} обычно возникают только при выборке <<топ-10>>.
 
-	Правильное решение задачи с лентой:\pause <<верни топ-10 запросов после такой-то новости из ленты>>.
+	Правильное решение задачи с лентой:\pause <<верни топ-10 записей после такой-то новости из ленты>>.
 \end{frame}
 
 \begin{frame}{DELETE и INSERT}
