--- a/161116/02-extra-01-grouping.tex
+++ b/161116/02-extra-01-grouping.tex
@@ -24,7 +24,7 @@
 	Посчитайте:
 	\begin{enumerate}
 		\item Среднюю площадь страны в зависимости от формы правления.
-		\item Средний корень площади страны в зависимости от формы правления.
+		\item Средний квадрат площади страны в зависимости от формы правления.
 		\item Количество стран с площадью порядка миллиона, порядка двух миллионов, и так далее.
 	\end{enumerate}
 \end{frame}
